force-app/main/default/objects/Batch_Configuration__c/Batch_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Configuration</label>
</CustomObject>