force-app/main/default/objects/Batch_Configuration__c/fields/Deactivate_Contacts_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Contacts_For_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Deactivate Contacts For Contact</label>
    <type>Checkbox</type>
</CustomField>