force-app/main/default/objects/Batch_Configuration__c/fields/Demo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Demo_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Demo Batch</label>
    <type>Checkbox</type>
</CustomField>