force-app/main/default/objects/Batch_Configuration__c/fields/Emp_Mileage_Update_For_Emp_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Emp_Mileage_Update_For_Emp_Mileage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Emp Mileage Update For Emp Mileage</label>
    <type>Checkbox</type>
</CustomField>