force-app/main/default/objects/Batch_Configuration__c/fields/Update_Reim_fuel_price_for_Account__c.field-meta.xml
<CustomField>
    <fullName>Update_Reim_fuel_price_for_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update Reim fuel price for Account</label>
    <type>Checkbox</type>
</CustomField>